--- a/src/index.css
+++ b/src/index.css
@@ -11,4 +11,5 @@ body {
   font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
   font-weight: 400;
   background-color: #f3f3f3;
+  position: relative;
 }
