--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,7 @@ body {
   font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
   font-weight: 400;
   background-color: #f3f3f3;
+  position: relative;
 }
 
 .sale-label {
